macros/blueprint-proc-macro/tests/invalid_cases/job/02_missing_result.rs
use gadget_blueprint_proc_macro::job;

#[job(params(n))]
fn keygen(n: u16) -> Vec<u8> {
    Vec::new()
}

fn main() {}
