macros/blueprint-proc-macro/tests/invalid_cases/job/02_missing_result.stderr
error: unexpected end of input, Missing 'result' argument in attribute
  --> tests/invalid_cases/job/02_missing_result.rs:10:1
   |
10 | #[job(params(n))]
   | ^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `job` (in Nightly builds, run with -Z macro-backtrace for more info)
